src/main/argo/generate/03-generator-nfs-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nfs-server-deployment
    namespace: generator
    labels:
        app: nfs-server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nfs-server-deployment
    template:
        metadata:
            labels:
                app: nfs-server-deployment
        spec:
            containers:
                -   name: nfs-server-deployment
                    image: itsthenetwork/nfs-server-alpine
                    securityContext:
                        privileged: true
                    ports:
                        -   containerPort: 2049
                    volumeMounts:
                        -   name: var-data
                            mountPath: /exports
            volumes:
                -   name: var-data
                    hostPath:
                        path: /var/opt/setmy.info/gintra
                        type: DirectoryOrCreate
