src/main/argo/generate/05-generator-test.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nfs-client-test
    namespace: generator
    # kubectl exec -it nfs-client-test -n generator -- sh
    # mkdir /mnt/gintra
    # mount -t nfs nfs-server-service.generator.svc.cluster.local:/ /mnt/gintra
    # mount -t nfs nfs-server-service.generator.svc.cluster.local:/exports/gintra /mnt/gintra
    # mount -t nfs nfs-server-service.generator.svc.cluster.local:/exports /mnt/gintra
    # mkdir -p /mnt/gintra/organizations/ee/has/workflows
    # mkdir -p /mnt/gintra/organizations/ee/has/ai
spec:
    containers:
        -   name: client
            image: alpine
            command: [ "sh", "-c", "sleep 3600" ]
            securityContext:
                privileged: true
            volumeMounts:
                -   name: host
                    mountPath: /host
    volumes:
        -   name: host
            hostPath:
                path: /
