src/main/argo/generate/04-generator-nfs-server-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nfs-server-service
    namespace: generator
spec:
    selector:
        app: nfs-server-deployment
    ports:
        -   name: nfs
            port: 2049
            targetPort: 2049
    type: ClusterIP
